[package]
name = "eznacl"
version = "3.2.3"
edition = "2021"
authors = [ "Jon Yoder <jon@yoder.cloud>"]
description = "A wrapper around NaCl which makes working with cryptography even easier"
readme = "README.md"
homepage = "https://gitlab.com/darkwyrm/eznacl"
repository = "https://gitlab.com/darkwyrm/eznacl"
license = "MPL-2.0-no-copyleft-exception"
keywords = ["crypto","nacl"]
categories = ["cryptography"]
exclude = [".gitignore"]

[dependencies]
base85 = "1.1.0"
blake2 = "0.10.2"
blake3 = "1.3.1"
digest = "0.10.2"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.5.4"
rust-argon2 = "1.0.0"
sha2 = "0.10.1"
sodiumoxide = "0.2.7"
tiny-keccak = { version = "2.0.2", features = ["k12", "sha3"] }
